# GLitchPlayer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  测试视频.md
doc/: 系统启动流程.md  系统结构.md
include/: PlayerEvent.h  logger.h
include/video/: FFmpegDecoder.h  GLRenderer.h  SDLRenderer.h  TextRenderer.h  VideoPlayer.h
include/video/filters/: Filter.h  FilterManager.h  FlipFilter.h  GrayscaleFilter.h  MirrorFilter.h
script/: build_mac.sh
src/: FFmpegDecoder.cpp  GLRenderer.cpp  SDLRenderer.cpp  TextRenderer.cpp  VideoPlayer.cpp  logger.cpp  play.cpp
src/filters/: FilterManager.cpp  FlipFilter.cpp  GrayscaleFilter.cpp  MirrorFilter.cpp
